--- a/.github/workflows/E2eMobileWorkflow.yml
+++ b/.github/workflows/E2eMobileWorkflow.yml
@@ -1,64 +1,62 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
-name: E2E mobile test workflow
+name: E2E workflow 
 
 on:
-  push:
-    branches: 
-      - "*"
-  pull_request:
-    branches: [ "frameWorkStructure" ]
+  repository_dispatch:
+    types:
+      - test-flutter-code
 
-env:
-  ANDROID_ARCH: x86-64
-  ANDROID_TARGET: google_apis
-  API_LEVEL: 33
-  ANDROID_BUILD_TOOLS_VERSION: 33.0.2
-  ANDROID_SDK_PACKAGES: system-images;android-30;google_apis;x86_64 platforms;android-30 build-tools;33.0.2 platform-tools emulator
-  EMULATOR_TIMEOUT: 350
-  EMULATOR_NAME: NEXUS
 jobs:
-  setup_emulator:
-    timeout-minutes: 20
-    runs-on: macos-latest
+  test:
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      
-      - name: Add avdmanager and sdkmanager to system PATH
-        run: |
-            echo "$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/emulator:$ANDROID_HOME/tools:$ANDROID_HOME/platform-tools:$ANDROID_HOME/build-tools/${{ env.ANDROID_BUILD_TOOLS_VERSION }}" >> $GITHUB_PATH
-      - name: Install Sdk
-      #first accepts all the licenses and install sdk 
-        run: |
-           yes Y | sdkmanager --licenses
-           sdkmanager --install ${ANDROID_SDK_PACKAGES}
-
-      - name: Launch emulator
-        run: |
-          chmod +x ./start_emu_headless.sh
-          EMULATOR_TIMEOUT=$EMULATOR_TIMEOUT EMULATOR_NAME=$EMULATOR_NAME ./start_emu_headless.sh
-
-      - name: Install appium
-        run: |
-          npm i -g appium@next --unsafe-perm=true --allow-root
-          appium driver install uiautomator2 
-      
-      - name: Install dependencies
-        run: | 
-          npm ci
-          
-      - name: Execute the test
-        run: | 
-          npm run mobile
-      - name: Generate report
-        if: always()
-        run: | 
-          npx allure generate report/allure-results
-
-      - name: Upload artifact
-        if: always()
-        uses: actions/upload-pages-artifact@v1
+      - name: Trigger Source Repository Workflow
+        uses: peter-evans/repository-dispatch@v1
         with:
-          path: './allure-report'    
+          token: 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  # Replace with your PAT
+          repository: hassanajmalcowlar/test-flutter-application
+          event-type: build-and-test
+
+      - name: Download APK Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: app-release.apk
+
+      - name: Set up Android Emulator
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 30
+          package: system-images;android-30;google_apis;x86_64
+          build-tools-version: 30.0.3
+          emulator-name: emulator
+
+      - name: Start Emulator
+        run: |
+          emulator -avd emulator -no-window -no-snapshot -noaudio -gpu off -verbose &
+          android-wait-for-emulator
+          adb shell input keyevent 82 &
+
+      - name: Install APK
+        run: |
+          adb install app-release.apk
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+      - name: Install Appium
+        run: |
+          npm install -g appium
+          appium driver install uiautomator2
+
+      - name: Install Dependencies
+        run: |
+          npm ci
+
+      - name: Start appium server
+        run:  |
+          appium --log-level info --log-timestamp --address 127.0.0.1 --port 4723 --allow-insecure chromedriver_autodownload &
+          sleep 5    
+      - name: Run Tests
+        run: |
+          npm wdio
+          # Add your test commands here to test the installed Flutter app
