--- a/.github/workflows/E2eMobileWorkflow.yml
+++ b/.github/workflows/E2eMobileWorkflow.yml
@@ -18,47 +18,47 @@ jobs:
       #     repository: Hassanajmalcowlar/test-flutter-application
       #     event-type: build-and-test
 
-      - name: Download APK Artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: app-release.apk
+      # - name: Download APK Artifact
+      #   uses: actions/download-artifact@v2
+      #   with:
+      #     name: app-release.apk
          
 
-      - name: Set up Android Emulator
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 30
-          package: system-images;android-30;google_apis;x86_64
-          build-tools-version: 30.0.3
-          emulator-name: emulator
+      # - name: Set up Android Emulator
+      #   uses: reactivecircus/android-emulator-runner@v2
+      #   with:
+      #     api-level: 30
+      #     package: system-images;android-30;google_apis;x86_64
+      #     build-tools-version: 30.0.3
+      #     emulator-name: emulator
 
-      - name: Start Emulator
-        run: |
-          emulator -avd emulator -no-window -no-snapshot -noaudio -gpu off -verbose &
-          android-wait-for-emulator
-          adb shell input keyevent 82 &
+      # - name: Start Emulator
+      #   run: |
+      #     emulator -avd emulator -no-window -no-snapshot -noaudio -gpu off -verbose &
+      #     android-wait-for-emulator
+      #     adb shell input keyevent 82 &
 
-      - name: Install APK
-        run: |
-          adb install app-release.apk
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 14
+      # - name: Install APK
+      #   run: |
+      #     adb install app-release.apk
+      # - name: Set up Node.js
+      #   uses: actions/setup-node@v2
+      #   with:
+      #     node-version: 14
       - name: Install Appium
         run: |
           npm install -g appium
           appium driver install uiautomator2
 
-      - name: Install Dependencies
-        run: |
-          npm ci
+      # - name: Install Dependencies
+      #   run: |
+      #     npm ci
 
-      - name: Start appium server
-        run:  |
-          appium --log-level info --log-timestamp --address 127.0.0.1 --port 4723 --allow-insecure chromedriver_autodownload &
-          sleep 5    
-      - name: Run Tests
-        run: |
-          npm wdio
-          # Add your test commands here to test the installed Flutter app
+      # - name: Start appium server
+      #   run:  |
+      #     appium --log-level info --log-timestamp --address 127.0.0.1 --port 4723 --allow-insecure chromedriver_autodownload &
+      #     sleep 5    
+      # - name: Run Tests
+      #   run: |
+      #     npm wdio
+      #     # Add your test commands here to test the installed Flutter app
