--- a/.github/workflows/E2eMobileWorkflow.yml
+++ b/.github/workflows/E2eMobileWorkflow.yml
@@ -3,8 +3,10 @@ name: E2E workflow
 on:
   repository_dispatch:
     types:
-      - build-and-test
- 
+      - test-flutter-code
+  push:
+    branches:
+      - "*"
 
 jobs:
   test:
@@ -17,48 +19,138 @@ jobs:
       #     token: ${{ secrets.PAT }} # Replace with your PAT
       #     repository: Hassanajmalcowlar/test-flutter-application
       #     event-type: build-and-test
+      - name: 'Set Flutter 3.10.6'
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: 3.10.6
+      - name: Set up Android Emulator
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 33
+          package: system-images;android-30;google_apis;x86_64
+          build-tools-version: 30.0.3
+          emulator-name: emulator
 
-      # - name: Download APK Artifact
-      #   uses: actions/download-artifact@v2
-      #   with:
-      #     name: app-release.apk
-         
+      - name: Start Emulator
+        run: |
+          emulator -avd emulator -no-window -no-snapshot -noaudio -gpu off -verbose &
+          android-wait-for-emulator
+          adb shell input keyevent 82 &
+          sleep 10
 
-      # - name: Set up Android Emulator
-      #   uses: reactivecircus/android-emulator-runner@v2
-      #   with:
-      #     api-level: 30
-      #     package: system-images;android-30;google_apis;x86_64
-      #     build-tools-version: 30.0.3
-      #     emulator-name: emulator
+      - name: Navigate to Submodule Directory
+        run: |
+          git submodule update --init --recursive
+          cd submodules 
 
-      # - name: Start Emulator
-      #   run: |
-      #     emulator -avd emulator -no-window -no-snapshot -noaudio -gpu off -verbose &
-      #     android-wait-for-emulator
-      #     adb shell input keyevent 82 &
+      - name: Set up Flutter in Submodule
+        run: |
+          flutter pub get
+      - name: Run Flutter App on Emulator
+        run: flutter run
 
-      # - name: Install APK
-      #   run: |
-      #     adb install app-release.apk
-      # - name: Set up Node.js
-      #   uses: actions/setup-node@v2
-      #   with:
-      #     node-version: 14
+      - name : return to main repository
+        run: cd ..
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
       - name: Install Appium
         run: |
           npm install -g appium
           appium driver install uiautomator2
 
-      # - name: Install Dependencies
-      #   run: |
-      #     npm ci
+      - name: Start Appium server
+        run:  |
+          appium --log-level info --log-timestamp --address 127.0.0.1 --port 4723 --allow-insecure chromedriver_autodownload &
+          sleep 5
+      - name: Install Dependencies
+        run: |
+          npm ci
 
-      # - name: Start appium server
-      #   run:  |
-      #     appium --log-level info --log-timestamp --address 127.0.0.1 --port 4723 --allow-insecure chromedriver_autodownload &
-      #     sleep 5    
-      # - name: Run Tests
-      #   run: |
-      #     npm wdio
-      #     # Add your test commands here to test the installed Flutter app
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      - name: Install Dependencies
+        run: |
+          npm ci
+
+      - name: Start appium server
+        run:  |
+          appium --log-level info --log-timestamp --address 127.0.0.1 --port 4723 --allow-insecure chromedriver_autodownload &
+          sleep 5    
+      - name: Run Tests
+        run: |
+          npm wdio
+          # Add your test commands here to test the installed Flutter app
