--- a/.github/workflows/E2eMobileWorkflow.yml
+++ b/.github/workflows/E2eMobileWorkflow.yml
@@ -23,6 +23,8 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: 3.10.6
+      - name: Ensure ADB is available
+        run: sudo apt-get install -y adb 
       - name: Set up Android Emulator
         uses: reactivecircus/android-emulator-runner@v2
         with:
