--- a/.github/workflows/E2eMobileWorkflow.yml
+++ b/.github/workflows/E2eMobileWorkflow.yml
@@ -32,6 +32,7 @@ jobs:
           package: system-images;android-30;google_apis;x86_64
           build-tools-version: 30.0.3
           emulator-name: emulator
+          script: ./gradlew connectedCheck
 
       - name: Start Emulator
         run: |
